--- a/index.html
+++ b/index.html
@@ -1,44 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rich’s Web</title>
-  <meta name="description" content="Rich’s Web — A personal space for projects and ideas.">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Header -->
-  <header class="site-header">
-    <h1>Rich’s Web</h1>
-    <p class="tagline">A personal space for my projects and ideas.</p>
-    <nav>
-      <ul class="nav-list">
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
   </header>
 
   <!-- Main content -->
   <main>
     <section id="about">
-      <h2>About Me</h2>
-      <p>Hi! I’m Rich — exploring technology, science, and creativity.</p>
+   
+      <h2>關於我</h2>
+  <p>Hi！我叫 Rich，是一名台灣高中生。我架設這個網站，是因為我想要有一個地方放著我所有的想法和作品。</p>
+
+  <p>當有人問我「你到底做了什麼、學了什麼？」時，我就能把這些給他看。我不是要證明自己很強，而是想證明給自己看：我學的這些東西不是沒用的。</p>
+
+  <p>當然，一部分原因也是練習寫網站啦。至於我為什麼叫 Rich，則是因為我爸覺得我的名字念快一點就很像 Rich，所以我的英文名字就是這樣出現的。</p>
     </section>
 
     <section id="projects">
-      <h2>Projects</h2>
+      <h2>作品</h2>
       <ul class="projects-list">
-        <li><a href="#">Project 1: Coming soon</a></li>
-        <li><a href="#">Project 2: Coming soon</a></li>
+        <li><a href="#">現在還沒有</a></li>
+    
       </ul>
     </section>
 
     <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:rich@example.com">rich@example.com</a></p>
+      <h2>如何聯繫我</h2>
+      <p>Email: <a href="mailto:richhuang81@gmail.com">richhuang81@gmail.com</a></p>
     </section>
   </main>
 
