--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <h2>關於我</h2>
   <p>Hi！我叫 Rich，是一名台灣高中生。我架設這個網站，是因為我想要有一個地方放著我所有的想法和作品。</p>
 
-  <p>當有人問我「你到底做了什麼、學了什麼？」時，我就能把這些給他看。我不是要證明自己很強，而是想證明給自己看：我學的這些東西不是沒用的。</p>
+  <p>當有人問我「你到底做了什麼、學了什麼？」的時候，我就能把這些給他看。我不是要證明自己很強，而是想證明給自己看：我學的這些東西不是沒用的。</p>
 
   <p>當然，一部分原因也是練習寫網站啦。至於我為什麼叫 Rich，則是因為我爸覺得我的名字念快一點就很像 Rich，所以我的英文名字就是這樣出現的。</p>
     </section>
