--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
+<!DOCTYPE html>
+<html lang="zh-Hant-TW">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rich的秘密基地</title>
+  <meta name="description" content="Rich的秘密基地 - 一個存放著Rich的作品和想法的地方">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- Header -->
+  <header class="site-header">
+    <h1>Rich的秘密基地</h1>
+    <p class="tagline">一個可以存放我的作品和想法的個人空間</p>
+    <nav>
+      <ul class="nav-list">
+        <li><a href="#about">關於我</a></li>
+        <li><a href="#projects">作品</a></li>
+        <li><a href="#contact">如何聯繫我</a></li>
+      </ul>
+    </nav>
   </header>
-
   <!-- Main content -->
   <main>
     <section id="about">
