--- a/index.html
+++ b/index.html
@@ -1,56 +1,24 @@
-<!DOCTYPE html>
-<html lang="zh-Hant-TW">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rich的秘密基地</title>
-  <meta name="description" content="Rich的秘密基地 - 一個存放著Rich的作品和想法的地方">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Header -->
-  <header class="site-header">
-    <h1>Rich的秘密基地</h1>
-    <p class="tagline">一個可以存放我的作品和想法的個人空間</p>
-    <nav>
-      <ul class="nav-list">
-        <li><a href="#about">關於我</a></li>
-        <li><a href="#projects">作品</a></li>
-        <li><a href="#contact">如何聯繫我</a></li>
-      </ul>
-    </nav>
-  </header>
-  <!-- Main content -->
-  <main>
-    <section id="about">
-   
-      <h2>關於我</h2>
-  <p>Hi！我叫 Rich，是一名台灣高中生。我架設這個網站，是因為我想要有一個地方放著我所有的想法和作品。</p>
-
-  <p>當有人問我「你到底做了什麼、學了什麼？」的時候，我就能把這些給他看。我不是要證明自己很強，而是想證明給自己看：我學的這些東西不是沒用的。</p>
-
-  <p>當然，一部分原因也是練習寫網站啦。至於我為什麼叫 Rich，則是因為我爸覺得我的名字念快一點就很像 Rich，所以我的英文名字就是這樣出現的。</p>
+      </p>
     </section>
 
+    <!-- 💻 作品展示 -->
     <section id="projects">
       <h2>作品</h2>
       <ul class="projects-list">
-        <li><a href="#">現在還沒有</a></li>
-    
+        <li><a href="#">目前還沒有作品</a></li>
       </ul>
     </section>
 
+    <!-- 📬 聯繫方式 -->
     <section id="contact">
       <h2>如何聯繫我</h2>
-      <p>Email: <a href="mailto:richhuang81@gmail.com">richhuang81@gmail.com</a></p>
+      <p>Email：<a href="mailto:richhuang81@gmail.com">richhuang81@gmail.com</a></p>
     </section>
   </main>
 
-  <!-- Footer -->
+  <!-- ===== 頁尾 ===== -->
   <footer class="site-footer">
     <p>© 2025 Rich Huang. All rights reserved.</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
