Add file converter and image compression tools

--- a/tools/index.html
+++ b/tools/index.html
@@ -65,6 +65,16 @@
                     <h3>二維碼生成</h3>
                     <p>快速生成 QR Code</p>
                 </div>
+                <div class="card" onclick="openTool('fileconverter')">
+                    <div class="card-icon">🔄</div>
+                    <h3>文件轉檔</h3>
+                    <p>多格式文件轉換</p>
+                </div>
+                <div class="card" onclick="openTool('imagecompress')">
+                    <div class="card-icon">📸</div>
+                    <h3>照片壓縮</h3>
+                    <p>快速壓縮圖片文件</p>
+                </div>
             </div>
         </section>
 
