Update file converter to support document formats (Markdown, HTML) and use Taiwan terminology

--- a/tools/index.html
+++ b/tools/index.html
@@ -66,9 +66,9 @@
                     <p>快速生成 QR Code</p>
                 </div>
                 <div class="card" onclick="openTool('fileconverter')">
-                    <div class="card-icon">🔄</div>
-                    <h3>文件轉檔</h3>
-                    <p>多格式文件轉換</p>
+                    <div class="card-icon">📄</div>
+                    <h3>文件轉換</h3>
+                    <p>PDF、Word、Markdown 轉換</p>
                 </div>
                 <div class="card" onclick="openTool('imagecompress')">
                     <div class="card-icon">📸</div>
